# autoresearch-tenstorrent

./: .gitignore  README.md  analysis.ipynb  configs.py  prepare.py  program.md  pyproject.toml  pytest.ini  train.py  tt_runtime.py
debug/: repro_attention.py  tt_multistep_compare.py
docs/: KNOWN_LIMITATIONS.md  PORTING_NOTES.md  UPSTREAM_SYNC.md
scripts/: bootstrap_tt.sh  check_tt_env.sh  check_upstream_sync.sh  docker_run.sh  run_cpu_smoke.sh  run_repro_check.sh  run_research_loop_viability.sh  run_tt_baseline.sh  run_tt_smoke.sh  tt_common.sh
tasks/: lessons.md
tests/: conftest.py  test_cpu_smoke.py  test_tt_correctness.py  test_tt_env.py  test_tt_train_smoke.py
