[project]
name = "autoresearch-tenstorrent"
version = "0.1.0"
description = "Tenstorrent single-device port of karpathy/autoresearch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pyarrow>=16.0.0",
    "requests>=2.31.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.9.0",
    "torch>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
markers = [
    "tt_hw: requires Tenstorrent hardware and torch-xla runtime",
    "long: long-running test",
]
testpaths = ["tests"]
